2007-04-30  Werner Koch  <wk@g10code.com>

	* gcrypt.h.in (GCRYCTL_DUMP_CONFIG): New.
	(GCRYCTL_SET_RNDEGD_SOCKET): New.
	* global.c (gcry_control): Add GCRYCTL_DUMP_CONFIG and
	GCRYCTL_SET_RNDEGD_SOCKET.

2007-04-18  Werner Koch  <wk@g10code.com>

	* gcrypt.h.in (gcry_sexp_nth_string): New.

	* sexp.c (gcry_sexp_nth_data): Factored code out to ...
	(sexp_nth_data): ... new.
	(gcry_sexp_nth_string): New.
	(gcry_sexp_nth_mpi): Reimplemented in terms of sexp_ntd_data.

2007-04-16  Werner Koch  <wk@g10code.com>

	* secmem.c (init_pool): Use sysconf() if available to determine
	page size.
	
2007-03-22  Werner Koch  <wk@g10code.com>

	* mpi.h (mpi_mod): New.
	(mpi_new, mpi_snew): New.

	* gcrypt.h.in: Add GCRY_PK_ECDSA.

2007-03-16  Werner Koch  <wk@g10code.com>

	* gcrypt.h.in (GCRY_THREAD_OPTION_PTHREAD_IMPL): Fixed typo
	introduced by me on 2006-10-23.

2007-02-22  Werner Koch  <wk@g10code.com>

	* gcrypt.h.in (gcry_ac_id_to_name, gcry_ac_name_to_id): Mark as
	deprecated.

	* libgcrypt.def (gcry_fast_random_poll): Removed - it is a macro.
	(gcry_cipher_register, gcry_cipher_unregister): New.
	(gcry_md_register, gcry_md_unregister): New.
	(gcry_pk_register, gcry_pk_unregister): New.
	(gcry_ac_data_from_sexp, gcry_ac_data_to_sexp): New.
	(gcry_ac_io_init, gcry_ac_io_init_va): New.
	(gcry_ac_data_encrypt_scheme, gcry_ac_data_decrypt_scheme): New.
	(gcry_ac_data_sign_scheme, gcry_ac_data_verify_scheme): New.

	* missing-string.c: Include stdio.h for the vsprintf prototype.

	* ath.h (struct ath_ops) [_WIN32]: Use int instead of socklen_t.

2007-02-21  Werner Koch  <wk@g10code.com>

	* libgcrypt.def (gcry_create_nonce, gcry_fast_random_poll)
	(gcry_md_debug): New.

	* libgcrypt-config.in: Remove duplicates from --cflags and --libs.
	Print a error for option --thread.

	* gcrypt.h.in (gcry_sexp_sprint): Change BUFFER from char* to void*.
	(gcry_md_ctl): Change BUFFER from unsigned char* to void*.
	(gcry_md_debug): New.