@@ -356,8 +356,8 @@ enum gcry_ctl_cmds
     GCRYCTL_SET_RANDOM_DAEMON_SOCKET = 49,
     GCRYCTL_USE_RANDOM_DAEMON = 50,
     GCRYCTL_FAKED_RANDOM_P = 51,
-    GCRYCTL_DUMP_CONFIG = 52,
-    GCRYCTL_SET_RNDEGD_SOCKET = 53
+    GCRYCTL_SET_RNDEGD_SOCKET = 52,
+    GCRYCTL_PRINT_CONFIG = 53
   };
 
 /* Perform various operations defined by CMD. */
