@@ -57,7 +57,7 @@ Noteworthy changes in version 1.3.0 (unreleased)
  GCRY_PK_ECDSA           NEW
  GCRY_CIPHER_SEED        NEW
  GCRYCTL_FAKED_RANDOM_P  NEW 
- GCRYCTL_DUMP_CONFIG     NEW
+ GCRYCTL_PRINT_CONFIG    NEW
  GCRYCTL_SET_RNDEGD_SOCKET  NEW.
  gcry_mpi_scan           CHANGED: Argument BUFFER is now void*.
  gcry_pk_algo_name       CHANGED: Returns "?" instead of NULL.
